--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@eslint/js": "^9.21.0",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "globals": "^16.0.0",
